# Mrpoid

./: README.md  about.txt  import-summary.txt  settings.gradle  修改日志  安卓7.0崩溃日志
app/: build.gradle  mrp  ~$mrp笔记  ~WRD0000.tmp
app/release/: app-release.apk
app/src/androidTest/java/mrper/formatfa/mrper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/mrper/formatfa/mrper/: AboutActivity.java  MainActivity.java  MyApplication.java
app/src/main/java/mrper/formatfa/mrper/adapter/: FileAdapter.java  MrpAdapter.java  OnListClickListener.java  OnListLongClickListener.java
app/src/main/java/mrper/formatfa/mrper/fragment/: FileViewFragment.java  LocalFragment.java  OnLineFragment.java
app/src/main/java/mrper/formatfa/mrper/mrp/: MrpItem.java  MrpReader.java
app/src/main/res/layout/: activity_main.xml  content_about.xml  fileitem.xml  fileview.xml  header.xml  localgame.xml  mrpitem.xml  onlinegame.xml  toolbar.xml
app/src/main/res/menu/: drawer.xml
app/src/main/res/values/: strings.xml
app/src/test/java/mrper/formatfa/mrper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libCommon/: build.gradle
libCommon/src/main/: AndroidManifest.xml
libCommon/src/main/java/com/edroid/common/utils/: CipherUtils.java  CpuUtils.java  KvTool.java  (+18 more)
libCommon/src/main/res/values/: comm_colors.xml  comm_styles.xml
libCommon/src/main/res/values-v14/: comm_styles.xml
libMrpoid/: CMakeCache.txt  CMakeLists.txt  android_gradle_build.json  build.gradle  build.ninja  cmake_install.cmake  rules.ninja
libMrpoid/src/main/: AndroidManifest.xml  临时笔记本
libMrpoid/src/main/java/com/mrpoid/app/: AppListShell.java  BaseActivity.java  EmulatorActivity.java  EmulatorService.java  ExternActivity.java  MrpoidSettingsActivity.java
libMrpoid/src/main/java/com/mrpoid/core/: BitmapPool.java  EmuSmsManager.java  EmuSurface.java  EmuUtils.java  Emulator.java  LibLoader.java  MrpRunner.java  MrpScreen.java  MrpoidSettings.java
libMrpoid/src/main/java/com/mrpoid/core/procmgr/: AppProcess.java  AppProcessManager.java
libMrpoid/src/main/java/com/mrpoid/game/engine/: Actor.java  Director.java
libMrpoid/src/main/java/com/mrpoid/game/keypad/: DPad.java  DefKeyLayouter.java  FloatMenuButton.java  Keypad.java  KeypadEditActivity.java  TextButton.java
libMrpoid/src/main/java/com/mrpoid/game/keysprite/: ChooserFragment.java  KeySpriteEditorActivity.java  SampleKeySprite.java
libMrpoid/src/main/java/com/mrpoid/utils/: FileUtils.java  Logger.java  SdkUtils.java  SmsUtil.java  UIUtils.java  UmengUtils.java
libMrpoid/src/main/java/com/mrpoid/view/: ListViewPathAdapter.java  PathChooseDialog.java
libMrpoid/src/main/jni/: Application.mk
libMrpoid/src/main/jni/src/: Android.mk  dsm.c  dsm.h  emulator.c  emulator.h  msgqueue.c  network.c  vm.c
libMrpoid/src/main/jni/src/font/: font_sky16_2.c
libMrpoid/src/main/jni/src/mr/: Android.mk  mr_pluto.c  mr_readfileforplat.c  mrporting.h  mythroad.c  mythroad_mini.c
libMrpoid/src/main/jni/src/mr/include/: mr.h
libMrpoid/src/main/jni/src/mr_pre/include/: test.c
libMrpoid/src/main/jni/src/mythroad/: mr_mem.c
libMrpoid/src/main/res/values/: emu_strings.xml  emu_styles.xml
